avoid infinite recursion in canonicalized() if cwd is a symlink

if current directory is a symlink to another directory
on the same drive (the simplest example; say, c:\current\dir
is a symlink to c:\target) then the first valid prefix for
"c:\target" in canonicalized() is "c:" (NOT "c:\") and would
be treated like "c:\current\dir" again...and again...
until stack overflow :)

Merge-Request: 494
Task-number: QTBUG-7610
Reviewed-by: Zeno Albisser